--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -99,7 +99,7 @@ a:hover { color: #FF0; }
   width: 10px;
   height: 10px;
   border-radius: 10px;
-  background: rgba(250, 250, 250, 0.75);
+  background: rgba(250, 250, 250, 0.85);
   -webkit-transition: all .3s;
   transition: all .3s;
   -webkit-transform: scale(0.6);
@@ -170,6 +170,7 @@ a:hover { color: #FF0; }
 }
 
 .baner-content h1 {
+  color: #fff;
   margin-top: 0px;
   font-size: 128px;
   font-weight: 900;
@@ -187,6 +188,7 @@ a:hover { color: #FF0; }
 
 
 .baner-content span {
+  color: #fff;
   display: inline-block;
   margin-top: -20px;
   font-weight: 600;
