--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -5,8 +5,11 @@ Vanilla Template
 https://templatemo.com/tm-526-vanilla
 
 */
-
+h1 {
+  color: #fff !important
+}
 p {
+  color: #fff;
   font-size: 16px;
   font-weight: 500;
   line-height: 25px;
