--- a/css/templatemo-main.css
+++ b/css/templatemo-main.css
@@ -177,7 +177,7 @@ a:hover { color: #FF0; }
   text-transform: uppercase;
   text-shadow: 2px 2px 5px rgb(0, 0, 0);
   margin-bottom: 0px;
-  color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255) !important;
 }
 
 .baner-content em {
@@ -194,7 +194,7 @@ a:hover { color: #FF0; }
   font-weight: 600;
   font-size: 48px;
   text-shadow: 2px 2px 5px rgb(0, 0, 0);
-  color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255) !important;
 }
 
 .baner-content .primary-button {
